--- a/Day2/2.form.html
+++ b/Day2/2.form.html
@@ -38,6 +38,14 @@
 
     <textarea name="" id="question" cols="30" rows="10"></textarea>
 
+    <!-- gender -->
+
+    <select name="gender" id="gender">
+      <option value="male">Male</option>
+      <option value="female">Female</option>
+      <option value="other">Other</option>
+    </select>
+
     <button type="submit">Đăng ký</button>
 
     <!-- <input type="button" value="Đăng ký"> -->
