--- a/Day2/4.anchor.html
+++ b/Day2/4.anchor.html
@@ -1,67 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <style>
-    html {
-      scroll-behavior: smooth;
-    }
-  </style>
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<style>
+			html {
+				scroll-behavior: smooth;
+			}
+		</style>
+	</head>
+	<body>
+		<header>
+			<div class="logo">
+				<p>Logo</p>
+				<img src="" alt="" />
+			</div>
 
-  <header>
-    <div class="logo">
-      <p>Logo</p>
-      <img src="" alt="">
-    </div>
+			<nav>
+				<ul>
+					<li><a href="#products-new">Hàng mới về</a></li>
+					<li><a href="#products-hot-sale">Hàng bán chạy</a></li>
+					<li><a href="#products-male">Dành cho nam</a></li>
+					<li><a href="#products-female">Dành cho nữ</a></li>
+				</ul>
+			</nav>
+		</header>
 
-    <nav>
-      <ul>
-        <li><a href="#products-new">Hàng mới về</a></li>
-        <li><a href="#products-hot-sale">Hàng bán chạy</a></li>
-        <li><a href="#products-male">Dành cho nam</a></li>
-        <li><a href="#products-female">Dành cho nữ</a></li>
-      </ul>
-    </nav>
+		<main>
+			<section id="products-new">
+				<h2>Hàng mới về</h2>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Est maiores maxime laboriosam nisi iste aut ipsa
+					fugit sed sapiente illum. Placeat nemo tempora odio expedita et quos iusto reiciendis, ratione porro eaque
+					modi enim, numquam dolore odit impedit ipsam vitae quidem! Facilis rem maxime architecto, officiis ad
+					doloremque veniam mollitia omnis voluptatibus harum hic, velit nemo exercitationem? Nihil nobis quod possimus
+					ratione nulla maiores nemo, libero voluptatem quia modi magnam, consequuntur nisi sequi. Tempora, magnam a
+					temporibus, fugiat quas dolore distinctio optio in laborum exercitationem, ducimus autem dolorem veniam
+					laboriosam saepe dolor. Voluptates nesciunt rem deleniti alias. Architecto, magni error?
+				</p>
+			</section>
 
-  </header>
+			<section id="products-hot-sale">
+				<h2>Hàng bán chạy</h2>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consequuntur, fugiat rem explicabo fuga
+					impedit repellendus quis non eveniet suscipit modi aut reiciendis iste reprehenderit, exercitationem, iusto id
+					ipsam culpa aperiam debitis eaque? Non quasi eius rerum voluptas ut accusamus, placeat deleniti cumque eum aut
+					neque illo illum, laudantium temporibus sit atque tempora corporis, ducimus debitis dolorem. Et odit dolorum
+					porro nisi fugit. Deleniti unde quo dolor vitae recusandae provident, at distinctio voluptatum a sed accusamus
+					deserunt perferendis nobis quibusdam exercitationem quam dolorem voluptates reiciendis omnis saepe laboriosam
+					dicta fugit. Perferendis reprehenderit quasi dolorum porro sint, rem animi dolore doloremque.
+				</p>
+			</section>
 
-  <main>
-    <section id="products-new">
-      <h2>Hàng mới về</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est maiores maxime laboriosam nisi iste aut ipsa fugit sed sapiente illum. Placeat nemo tempora odio expedita et quos iusto reiciendis, ratione porro eaque modi enim, numquam dolore odit impedit ipsam vitae quidem! Facilis rem maxime architecto, officiis ad doloremque veniam mollitia omnis voluptatibus harum hic, velit nemo exercitationem? Nihil nobis quod possimus ratione nulla maiores nemo, libero voluptatem quia modi magnam, consequuntur nisi sequi. Tempora, magnam a temporibus, fugiat quas dolore distinctio optio in laborum exercitationem, ducimus autem dolorem veniam laboriosam saepe dolor. Voluptates nesciunt rem deleniti alias. Architecto, magni error?</p>
-    </section>
+			<section id="products-male">
+				<h2>Dành cho nam</h2>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti esse inventore nobis error rem. Tempore,
+					alias tempora! Id error exercitationem alias natus, in excepturi quos dicta ratione accusamus sapiente minus?
+				</p>
+			</section>
 
-    <section id="products-hot-sale">
-      <h2>Hàng bán chạy</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consequuntur, fugiat rem explicabo fuga impedit repellendus quis non eveniet suscipit modi aut reiciendis iste reprehenderit, exercitationem, iusto id ipsam culpa aperiam debitis eaque? Non quasi eius rerum voluptas ut accusamus, placeat deleniti cumque eum aut neque illo illum, laudantium temporibus sit atque tempora corporis, ducimus debitis dolorem. Et odit dolorum porro nisi fugit. Deleniti unde quo dolor vitae recusandae provident, at distinctio voluptatum a sed accusamus deserunt perferendis nobis quibusdam exercitationem quam dolorem voluptates reiciendis omnis saepe laboriosam dicta fugit. Perferendis reprehenderit quasi dolorum porro sint, rem animi dolore doloremque.</p>
-    </section>
+			<section id="products-female">
+				<h2>Dành cho nữ</h2>
+				<p>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, placeat nemo harum ab explicabo
+					laborum modi et hic ullam quisquam omnis quos aperiam iste ea minima possimus ipsam optio incidunt
+					perspiciatis dolores asperiores. Magni possimus rem, nihil expedita pariatur aut inventore! Recusandae soluta,
+					inventore, reprehenderit assumenda laboriosam dolores, nisi mollitia minus rerum quibusdam voluptatum sapiente
+					nostrum unde enim nulla. Veniam sapiente rem ab quos corporis alias, numquam exercitationem ipsa laudantium
+					dolores assumenda facilis quia voluptatum illum temporibus delectus necessitatibus dolorum. Dolorem mollitia
+					aliquid incidunt illo reprehenderit sequi facere possimus quis laboriosam corrupti esse earum nulla quae,
+					animi deleniti aperiam sunt nobis iste asperiores voluptatum officia libero. Quaerat iste nihil consequuntur
+					minus numquam eveniet quae vero adipisci asperiores eaque quo obcaecati repudiandae qui autem vitae, doloribus
+					provident, nisi amet corporis necessitatibus deleniti! At officia totam libero aut esse unde alias saepe sed.
+					Delectus, provident. Fugit, nulla ratione. Numquam error alias assumenda cupiditate iusto facilis esse.
+					Voluptatem, pariatur repudiandae officiis in omnis non saepe, laborum mollitia dicta voluptas optio odio culpa
+					placeat temporibus ullam beatae nostrum! Ipsum fugiat possimus ratione excepturi rem quo suscipit in impedit
+					id natus harum assumenda quis, quod, facilis quia nostrum, ab ad qui earum ullam quisquam doloribus.
+				</p>
+			</section>
+		</main>
 
-    <section id="products-male">
-      <h2>Dành cho nam</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti esse inventore nobis error rem. Tempore, alias tempora! Id error exercitationem alias natus, in excepturi quos dicta ratione accusamus sapiente minus?</p>
-    </section>
+		<footer>
+			Copyright by hoangnm
+			<a href="tel:0346569898">0346569898</a>
+			<a href="mailto:hoangnm.ndm@gmail.com">Gửi mail cho tôi</a>
+			<a href="hoangnm-cv.pdf" download>Download my CV</a>
+		</footer>
 
-    <section id="products-female">
-      <h2>Dành cho nữ</h2>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, placeat nemo harum ab explicabo laborum modi et hic ullam quisquam omnis quos aperiam iste ea minima possimus ipsam optio incidunt perspiciatis dolores asperiores. Magni possimus rem, nihil expedita pariatur aut inventore! Recusandae soluta, inventore, reprehenderit assumenda laboriosam dolores, nisi mollitia minus rerum quibusdam voluptatum sapiente nostrum unde enim nulla. Veniam sapiente rem ab quos corporis alias, numquam exercitationem ipsa laudantium dolores assumenda facilis quia voluptatum illum temporibus delectus necessitatibus dolorum. Dolorem mollitia aliquid incidunt illo reprehenderit sequi facere possimus quis laboriosam corrupti esse earum nulla quae, animi deleniti aperiam sunt nobis iste asperiores voluptatum officia libero. Quaerat iste nihil consequuntur minus numquam eveniet quae vero adipisci asperiores eaque quo obcaecati repudiandae qui autem vitae, doloribus provident, nisi amet corporis necessitatibus deleniti! At officia totam libero aut esse unde alias saepe sed. Delectus, provident. Fugit, nulla ratione. Numquam error alias assumenda cupiditate iusto facilis esse. Voluptatem, pariatur repudiandae officiis in omnis non saepe, laborum mollitia dicta voluptas optio odio culpa placeat temporibus ullam beatae nostrum! Ipsum fugiat possimus ratione excepturi rem quo suscipit in impedit id natus harum assumenda quis, quod, facilis quia nostrum, ab ad qui earum ullam quisquam doloribus.</p>
-    </section>
-
-  </main>
-
-  <footer>
-    Copyright by hoangnm
-    <a href="tel:0346569898">0346569898</a>
-    <a href="mailto:hoangnm.ndm@gmail.com">Gửi mail cho tôi</a>
-  </footer>
-
-  <iframe src="" frameborder="0"></iframe>
-  <iframe width="784" height="441" src="https://www.youtube.com/embed/7NUpMNLRlDA" title="🌙 2 TIẾNG HỌC CÙNG MÌNH BUỔI TỐI | 🎹 Nhạc Piano, Tiếng Mưa | Học Tiếng Nhật | Pomodoro 25/5" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  <iframe src="https://fullstack.edu.vn/" frameborder="1"></iframe>
-  <iframe src="./1.index.html" frameborder="0" width="600"></iframe>
-  
-</body>
+		<iframe src="" frameborder="0"></iframe>
+		<iframe
+			width="784"
+			height="441"
+			src="https://www.youtube.com/embed/7NUpMNLRlDA"
+			title="🌙 2 TIẾNG HỌC CÙNG MÌNH BUỔI TỐI | 🎹 Nhạc Piano, Tiếng Mưa | Học Tiếng Nhật | Pomodoro 25/5"
+			frameborder="0"
+			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+			referrerpolicy="strict-origin-when-cross-origin"
+			allowfullscreen
+		></iframe>
+		<iframe src="https://fullstack.edu.vn/" frameborder="1"></iframe>
+		<iframe src="./1.index.html" frameborder="0" width="600"></iframe>
+	</body>
 </html>
