Day 3: fix icon postition

--- a/Day3/project-01/index.html
+++ b/Day3/project-01/index.html
@@ -27,10 +27,7 @@
 
 				<div class="preview margin-bottom-28">
 					<ul>
-						<li>
-							<!-- <img src="./imgs/start-icon.png" width="32" height="32" alt="" /> -->
-							<i class="bx bx-star preview-icon"></i><span> 4.7 Rating</span>
-						</li>
+						<li><i class="bx bx-star preview-icon"></i><span> 4.7 Rating</span></li>
 						<li><i class="bx bx-medal preview-icon"></i><span> 4,447 Reviews</span></li>
 						<li><i class="bx bx-user preview-icon"></i><span> 478 Students</span></li>
 					</ul>
