--- a/Day4/project-02/index.html
+++ b/Day4/project-02/index.html
@@ -5,6 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="./styles.css" />
 	</head>
 	<body>
@@ -21,16 +27,16 @@
 		<div class="collection-list">
 			<div class="collection-item">
 				<div class="main-img">
-					<img src="https://picsum.photos/268/389" alt="" />
+					<img src="https://picsum.photos/389/268" alt="" />
 				</div>
 				<div class="sub-imgs">
-					<img src="https://picsum.photos/100/120" alt="" />
-					<img src="https://picsum.photos/100/120" alt="" />
-					<img src="https://picsum.photos/100/120" alt="" />
+					<img src="https://picsum.photos/120/100" alt="" />
+					<img src="https://picsum.photos/120/100" alt="" />
+					<img src="https://picsum.photos/120/100" alt="" />
 				</div>
 				<div class="collection-description">
-					<h2>People</h2>
-					<a href="#"> <i class="bx bx-image"></i> 144</a>
+					<h2><a href="#">People</a></h2>
+					<a href="#" class="quantity"><i class="bx bx-image"></i> 144</a>
 				</div>
 			</div>
 		</div>
