--- a/Day7/project-05/index.html
+++ b/Day7/project-05/index.html
@@ -8,8 +8,23 @@
 		<link rel="stylesheet" href="./assets/css/main.css" />
 	</head>
 	<body>
-		<header></header>
-		<section id="banner"></section>
+		<header>
+			<div class="container d-flex justify-between align-center">
+				<div class="logo"><span>Lesson</span><span>.</span></div>
+				<nav class="header-nav">
+					<ul class="d-flex justify-between align-center">
+						<li><a href="">Home</a></li>
+						<li><a href="">Courses</a></li>
+						<li><a href="">Pricing</a></li>
+						<li><a href="">Reviews</a></li>
+						<li><a class="btn-header" href="#">Sign Up</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+		<section id="banner">
+			<h1>Learn without limits and spread knowledge.</h1>
+		</section>
 		<section id="courses"></section>
 		<section id="responses"></section>
 		<section id="cta"></section>
