--- a/Day9/project-05/index.html
+++ b/Day9/project-05/index.html
@@ -18,6 +18,7 @@
 
 		<!-- Main CSS -->
 		<link rel="stylesheet" href="./css/reset.css" />
+		<link rel="stylesheet" href="./css/common.css" />
 		<link rel="stylesheet" href="./css/main.css" />
 	</head>
 	<body>
