--- a/Day11/index.html
+++ b/Day11/index.html
@@ -18,7 +18,9 @@
 
 		<!-- css -->
 		<link rel="stylesheet" href="./assets/css/reset.css" />
-		<link rel="stylesheet" href="./assets/css/main.css" />
+		<link rel="stylesheet" href="./assets/css/normalize.css" />
+		<!-- <link rel="stylesheet" href="./assets/css/main.css" /> -->
+		<link rel="stylesheet" href="./assets/css/main-prefix.css" />
 	</head>
 	<body>
 		<div class="container">
