--- a/Day11/index.html
+++ b/Day11/index.html
@@ -16,11 +16,18 @@
 		<!-- icons -->
 		<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+			crossorigin="anonymous"
+		/>
+
 		<!-- css -->
 		<link rel="stylesheet" href="./assets/css/reset.css" />
-		<link rel="stylesheet" href="./assets/css/normalize.css" />
-		<!-- <link rel="stylesheet" href="./assets/css/main.css" /> -->
-		<link rel="stylesheet" href="./assets/css/main-prefix.css" />
+		<link rel="stylesheet" href="./assets/css/main.css" />
+		<link rel="stylesheet" href="./assets/css/responsive.css" />
+		<!-- <link rel="stylesheet" href="./assets/css/main-prefix.css" /> -->
 	</head>
 	<body>
 		<div class="container">
@@ -37,6 +44,61 @@
 				</nav>
 				<a href="#" class="btn btn-header">Contact us</a>
 			</header>
+
+			<!-- Bootstrap -->
+			<!-- <header>
+				<nav class="navbar navbar-expand-lg bg-body-tertiary">
+					<div class="container-fluid">
+						<a class="navbar-brand" href="#">Navbar</a>
+						<button
+							class="navbar-toggler"
+							type="button"
+							data-bs-toggle="collapse"
+							data-bs-target="#navbarSupportedContent"
+							aria-controls="navbarSupportedContent"
+							aria-expanded="false"
+							aria-label="Toggle navigation"
+						>
+							<span class="navbar-toggler-icon"></span>
+						</button>
+						<div class="collapse navbar-collapse" id="navbarSupportedContent">
+							<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+								<li class="nav-item">
+									<a class="nav-link active" aria-current="page" href="#">Home</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="#">Link</a>
+								</li>
+								<li class="nav-item dropdown">
+									<a
+										class="nav-link dropdown-toggle"
+										href="#"
+										role="button"
+										data-bs-toggle="dropdown"
+										aria-expanded="false"
+									>
+										Dropdown
+									</a>
+									<ul class="dropdown-menu">
+										<li><a class="dropdown-item" href="#">Action</a></li>
+										<li><a class="dropdown-item" href="#">Another action</a></li>
+										<li><hr class="dropdown-divider" /></li>
+										<li><a class="dropdown-item" href="#">Something else here</a></li>
+									</ul>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link disabled" aria-disabled="true">Disabled</a>
+								</li>
+							</ul>
+							<form class="d-flex" role="search">
+								<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+								<button class="btn btn-outline-success" type="submit">Search</button>
+							</form>
+						</div>
+					</div>
+				</nav>
+			</header> -->
+
 			<section id="banner">
 				<h1>Welcome to our Travel Blog</h1>
 			</section>
@@ -170,9 +232,9 @@
 					</div>
 				</div>
 				<hr />
-				<div class="footer_bottom d-flex-between">
-					<a href="#"><img src="./assets/imgs/logo.png" alt="" /></a>
-					<nav>
+				<div class="footer__bottom d-flex-between">
+					<a class="footer__logo" href="#"><img src="./assets/imgs/logo.png" alt="" /></a>
+					<nav class="footer__nav">
 						<ul class="nav__inner d-flex-between">
 							<li><a href="#">Home</a></li>
 							<li><a href="#">About</a></li>
@@ -189,5 +251,11 @@
 				</div>
 			</footer>
 		</div>
+
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
