--- a/Day16/bootstrap.html
+++ b/Day16/bootstrap.html
@@ -19,14 +19,17 @@
 	</head>
 	<body>
 		<div class="container text-center">
-			<div class="row">
-				<div class="col">
+			<div class="row row-cols-3">
+				<div class="">
 					<div class="item">Column</div>
 				</div>
-				<div class="col">
+				<div class="">
 					<div class="item">Column</div>
 				</div>
-				<div class="col">
+				<div class="">
+					<div class="item">Column</div>
+				</div>
+				<div class="">
 					<div class="item">Column</div>
 				</div>
 			</div>
