--- a/Day16/ex01.html
+++ b/Day16/ex01.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="container text-center">
-			<div class="row">
+			<div class="row row-cols-4">
 				<div class="col col-6">
 					<div class="item">Column</div>
 				</div>
