--- a/Day16/ex02.html
+++ b/Day16/ex02.html
@@ -51,6 +51,36 @@
 				column-gap: 3rem;
 			}
 
+			.g-0,
+			.gy-0 {
+				row-gap: 0;
+			}
+
+			.g-1,
+			.gy-1 {
+				row-gap: 0.25rem;
+			}
+
+			.g-2,
+			.gy-2 {
+				row-gap: 0.5rem;
+			}
+
+			.g-3,
+			.gy-3 {
+				row-gap: 1rem;
+			}
+
+			.g-4,
+			.gy-4 {
+				row-gap: 1.5rem;
+			}
+
+			.g-5,
+			.gy-5 {
+				row-gap: 3rem;
+			}
+
 			.row-columns-1 {
 				grid-template-columns: 1fr;
 			}
@@ -79,11 +109,11 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="row row-columns-3 gx-3">
+			<div class="row row-columns-3 gx-3 gy-5">
 				<div class="item">item</div>
 				<div class="item">item</div>
 				<div class="item">item</div>
-
+				<div class="item">item</div>
 				<div class="item">item</div>
 				<div class="item">item</div>
 				<div class="item">item</div>
