--- a/Day25/index.html
+++ b/Day25/index.html
@@ -11,6 +11,7 @@
 		<!-- <script src="./ex02.js"></script> -->
 		<!-- <script src="./ex03.js"></script> -->
 		<!-- <script src="./ex04.js"></script> -->
-		<script src="./ex05.js"></script>
+		<!-- <script src="./ex05.js"></script> -->
+		<script src="./ex06.js"></script>
 	</body>
 </html>
