--- a/Day26/index.html
+++ b/Day26/index.html
@@ -11,6 +11,9 @@
 		<!-- <script src="./ex02.js"></script> -->
 		<!-- <script src="./ex03.js"></script> -->
 		<!-- <script src="./ex04.js"></script> -->
-		<script src="./ex05.js"></script>
+		<!-- <script src="./ex05.js"></script> -->
+		<!-- <script src="./ex06.js"></script> -->
+		<!-- <script src="./ex07.js"></script> -->
+		<script src="./ex08.js"></script>
 	</body>
 </html>
