--- a/Day29/index.html
+++ b/Day29/index.html
@@ -6,15 +6,10 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<h1 class="title" id="title-page">DOM</h1>
-		<ol>
-			<li>item 1</li>
-			<li>item 2</li>
-			<li>item 3</li>
-			<li>item 4</li>
-		</ol>
-		<!-- <script src="./ex01.js"></script> -->
-		<!-- <script src="./ex02.js"></script> -->
-		<script src="./ex03.js"></script>
+		<!-- <script type="module" src="./ex01.js"></script> -->
+		<!-- <script type="module" src="./ex02.js"></script> -->
+		<!-- <script type="module" src="./ex03.js"></script> 
+		-->
+		<script src="./ex04.js"></script>
 	</body>
 </html>
