--- a/Day31/index.html
+++ b/Day31/index.html
@@ -6,13 +6,17 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<h1 class="title" id="title-page">DOM</h1>
-		<ol>
-			<li>item 1</li>
-			<li>item 2</li>
-			<li>item 3</li>
-			<li>item 4</li>
-		</ol>
+		<h1>Tieu de chinh</h1>
+		<div class="box">
+			<p>Noi dung cua box</p>
+			<ul>
+				<li style="display: none">item 1</li>
+				<li>item 2</li>
+				<li>item 3</li>
+			</ul>
+		</div>
+
+		<a href="" class="anchor1" id="anchorid" style="background-color: red"></a>
 		<!-- <script src="./ex01.js"></script> -->
 		<!-- <script src="./ex02.js"></script> -->
 		<script src="./ex03.js"></script>
