--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
 		<title>Todo App</title>
 	</head>
 	<body>
+		<header>
+			Dau trang
+			<ul>
+				<li><a href="/login">Dang nhap</a></li>
+				<li><a href="/register">Dang ky</a></li>
+				<li><a href="introduce">Gioi thieu</a></li>
+			</ul>
+		</header>
 		<div id="app"></div>
+		<footer>Chan trang</footer>
 		<script type="module" src="/main.js"></script>
 	</body>
 </html>
